--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 </head>
 <body>
     <div class="apex-breath-wrapper">
-        <button class="apex-breath-btn" id="openBtn">Box Breathing starten</button>
+        <button class="apex-breath-btn" id="openBtn">start Box Breathing</button>
     </div>
 
     <div class="apex-breath-overlay" id="overlay">
