--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         
-        body { font-family: Arial, sans-serif; background: transparent; }
+        body { font-family: Arial, sans-serif; background: transparent; display: flex; justify-content: center; align-items: center; min-height: 100vh; }
         
         .apex-breath-wrapper { text-align: center; padding: 40px 20px; }
 
