--- a/index.html
+++ b/index.html
@@ -203,11 +203,11 @@
                 <button class="apex-breath-triangle up" id="upBtn"></button>
                 <div>
                     <div class="apex-breath-value" id="durVal">4</div>
-                    <div class="apex-breath-label">Sekunden pro Phase</div>
+                    <div class="apex-breath-label">Seconds per phase</div>
                 </div>
                 <button class="apex-breath-triangle down" id="downBtn"></button>
             </div>
-            <button class="apex-breath-start" id="startBtn">Starten</button>
+            <button class="apex-breath-start" id="startBtn">Start</button>
         </div>
         
         <div class="apex-breath-screen" id="screen">
@@ -215,7 +215,7 @@
                 <div class="apex-breath-box">
                     <div class="apex-breath-fill" id="fill"></div>
                     <div class="apex-breath-ball" id="ball"></div>
-                    <div class="apex-breath-text" id="text">Bereit</div>
+                    <div class="apex-breath-text" id="text">Ready</div>
                 </div>
             </div>
             <div class="apex-breath-ctrls">
